Fix integer/float inputs

--- a/.env-devel
+++ b/.env-devel
@@ -350,3 +350,21 @@ REGISTRY_PATH=registry:5000
 REGISTRY_URL=10.43.103.149:5000
 DIRECTOR_REGISTRY_CACHING=False
 CATALOG_BACKGROUND_TASK_REST_TIME=1
+REGISTRY_AUTH=False
+REGISTRY_SSL=False
+REGISTRY_PATH=registry:5000
+REGISTRY_URL=10.43.103.149:5000
+DIRECTOR_REGISTRY_CACHING=False
+CATALOG_BACKGROUND_TASK_REST_TIME=1
+REGISTRY_AUTH=False
+REGISTRY_SSL=False
+REGISTRY_PATH=registry:5000
+REGISTRY_URL=10.43.103.149:5000
+DIRECTOR_REGISTRY_CACHING=False
+CATALOG_BACKGROUND_TASK_REST_TIME=1
+REGISTRY_AUTH=False
+REGISTRY_SSL=False
+REGISTRY_PATH=registry:5000
+REGISTRY_URL=10.43.103.149:5000
+DIRECTOR_REGISTRY_CACHING=False
+CATALOG_BACKGROUND_TASK_REST_TIME=1
