--- a/.env-devel
+++ b/.env-devel
@@ -11,7 +11,7 @@
 #
 
 AGENT_VOLUMES_CLEANUP_S3_SECURE=0
-AGENT_VOLUMES_CLEANUP_S3_ENDPOINT=10.43.103.149:9001
+AGENT_VOLUMES_CLEANUP_S3_ENDPOINT=172.17.0.1:9001
 AGENT_VOLUMES_CLEANUP_S3_ACCESS_KEY=12345678
 AGENT_VOLUMES_CLEANUP_S3_SECRET_KEY=12345678
 AGENT_VOLUMES_CLEANUP_S3_BUCKET=simcore-volume-backups
@@ -141,7 +141,7 @@ R_CLONE_OPTION_BUFFER_SIZE=0M
 
 S3_ACCESS_KEY=12345678
 S3_BUCKET_NAME=simcore
-S3_ENDPOINT=10.43.103.149:9001
+S3_ENDPOINT=172.17.0.1:9001
 S3_SECRET_KEY=12345678
 S3_SECURE=0
 
@@ -270,7 +270,7 @@ WEBSERVER_VERSION_CONTROL=1
 # For development ONLY ---------------
 #
 # AIODEBUG_SLOW_DURATION_SECS=0.25
-API_SERVER_DEV_FEATURES_ENABLED=1
+# API_SERVER_DEV_FEATURES_ENABLED=1
 # API_SERVER_DEV_HTTP_CALLS_LOGS_PATH=captures.ignore.keep.json
 # PYTHONASYNCIODEBUG=1
 # PYTHONTRACEMALLOC=1
@@ -364,28 +364,3 @@ WB_DB_EL_TRACING=null
 WB_DB_EL_USERS=0
 WB_DB_EL_VERSION_CONTROL=0
 WB_DB_EL_WALLETS=0
-
-REGISTRY_AUTH=False
-REGISTRY_SSL=False
-REGISTRY_PATH=registry:5000
-REGISTRY_URL=10.43.103.149:5000
-DIRECTOR_REGISTRY_CACHING=False
-CATALOG_BACKGROUND_TASK_REST_TIME=1
-REGISTRY_AUTH=False
-REGISTRY_SSL=False
-REGISTRY_PATH=registry:5000
-REGISTRY_URL=10.43.103.149:5000
-DIRECTOR_REGISTRY_CACHING=False
-CATALOG_BACKGROUND_TASK_REST_TIME=1
-REGISTRY_AUTH=False
-REGISTRY_SSL=False
-REGISTRY_PATH=registry:5000
-REGISTRY_URL=10.43.103.149:5000
-DIRECTOR_REGISTRY_CACHING=False
-CATALOG_BACKGROUND_TASK_REST_TIME=1
-REGISTRY_AUTH=False
-REGISTRY_SSL=False
-REGISTRY_PATH=registry:5000
-REGISTRY_URL=10.43.103.149:5000
-DIRECTOR_REGISTRY_CACHING=False
-CATALOG_BACKGROUND_TASK_REST_TIME=1
